<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scroll"
    tools:context="com.alc_opt_suvi.suvi.drinkpricecalculator.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_drink1"
                android:textStyle="bold"
                android:id="@+id/m_drink1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_drink1"
                android:hint="@string/m_name_hint_dr1"
                android:id="@+id/m_name_dr1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_name_dr1"
                android:hint="@string/m_alcVol_hint_dr1"
                android:id="@+id/m_alcVol_dr1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_alcVol_dr1"
                android:id="@+id/m_vol_dr1"
                android:hint="@string/m_vol_hint_dr1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_vol_dr1"
                android:id="@+id/m_price_dr1"
                android:hint="@string/m_price_hint_dr1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_drink2"
                android:textStyle="bold"
                android:layout_below="@+id/m_price_dr1"
                android:id="@+id/m_drink2"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_drink2"
                android:hint="@string/m_name_hint_dr1"
                android:id="@+id/m_name_dr2"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_name_dr2"
                android:hint="@string/m_alcVol_hint_dr2"
                android:id="@+id/m_alcVol_dr2"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_alcVol_dr2"
                android:id="@+id/m_vol_dr2"
                android:hint="@string/m_vol_hint_dr2"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_vol_dr2"
                android:id="@+id/m_price_dr2"
                android:hint="@string/m_price_hint_dr2"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_price_dr2"
                android:layout_centerHorizontal="true"
                android:id="@+id/m_bt_comp"
                android:text="@string/m_bt_comp"/>

    </RelativeLayout>
</ScrollView>

